* RDMA/cma: Fix crash in request handlers (CVE-2011-0695) * IB/cm: Bump reference count on cm_id before invoking callback   (CVE-2011-0695)
svn path=/dists/lenny-security/linux-2.6/; revision=17412

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 linux-2.6 (2.6.26-26lenny3) UNRELEASED; urgency=low
 
+  [ dann frazier ]
   * net: clear heap allocations for privileged ethtool actions (CVE-2010-4655)
   * xfs: prevent leaking uninitialized stack memory in FSGEOMETRY_V1
     (CVE-2011-0711)
@@ -18,6 +19,9 @@ linux-2.6 (2.6.26-26lenny3) UNRELEASED; urgency=low
   * ipv6: netfilter: ip6_tables: fix infoleak to userspace (CVE-2011-1172)
   * econet: 4 byte infoleak to the network (CVE-2011-1173)
   * irda: validate peer name and attribute lengths (CVE-2011-1180)
+  * RDMA/cma: Fix crash in request handlers (CVE-2011-0695)
+  * IB/cm: Bump reference count on cm_id before invoking callback
+    (CVE-2011-0695)
 
   [ Ben Hutchings ]
   * [vserver] Complete fix for CVE-2010-4243 (Closes: #618485)
