--- a/debian/changelog
+++ b/debian/changelog
@@ -22,9 +22,15 @@ linux-2.6 (2.6.26-26lenny3) UNRELEASED; urgency=low
   * RDMA/cma: Fix crash in request handlers (CVE-2011-0695)
   * IB/cm: Bump reference count on cm_id before invoking callback
     (CVE-2011-0695)
+  * Prevent rt_sigqueueinfo and rt_tgsigqueueinfo from spoofing the signal code
+    (CVE-2011-1182)
+  * Relax si_code check in rt_sigqueueinfo and rt_tgsigqueueinfo (CVE-2011-1182)
 
   [ Ben Hutchings ]
   * [vserver] Complete fix for CVE-2010-4243 (Closes: #618485)
+
+  [ dann frazier ]
+  * 
 
  -- dann frazier <dannf@debian.org>  Wed, 30 Mar 2011 22:46:26 -0600
 
