--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux-2.6 (2.6.32-34squeeze1) UNRELEASED; urgency=high
+
+  * Validate size of EFI GUID partition entries (CVE-2011-1577)
+
+ -- dann frazier <dannf@debian.org>  Tue, 17 May 2011 00:41:07 -0600
+
 linux-2.6 (2.6.32-34) stable; urgency=high
 
   [ Ian Campbell ]
