* [cifs] fix session reuse issue (CVE-2011-1585):   - cifs: clean up cifs_find_smb_ses   - cifs: fix NULL pointer dereference in cifs_find_smb_ses   - cifs: check for NULL session password
svn path=/dists/squeeze-security/linux-2.6/; revision=17435

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,10 @@
 linux-2.6 (2.6.32-34squeeze1) UNRELEASED; urgency=high
 
   * Validate size of EFI GUID partition entries (CVE-2011-1577)
+  * [cifs] fix session reuse issue (CVE-2011-1585):
+    - cifs: clean up cifs_find_smb_ses
+    - cifs: fix NULL pointer dereference in cifs_find_smb_ses
+    - cifs: check for NULL session password
 
  -- dann frazier <dannf@debian.org>  Tue, 17 May 2011 00:41:07 -0600
 
