--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ linux-2.6 (2.6.32-34squeeze1) UNRELEASED; urgency=high
     - cifs: clean up cifs_find_smb_ses
     - cifs: fix NULL pointer dereference in cifs_find_smb_ses
     - cifs: check for NULL session password
+  * gre: fix netns vs proto registration ordering (CVE-2011-1767)
 
  -- dann frazier <dannf@debian.org>  Tue, 17 May 2011 00:41:07 -0600
 
