dccp: handle invalid feature options length (CVE-2011-1770)
svn path=/dists/squeeze-security/linux-2.6/; revision=17450

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ linux-2.6 (2.6.32-34squeeze1) UNRELEASED; urgency=high
     - cifs: fix NULL pointer dereference in cifs_find_smb_ses
     - cifs: check for NULL session password
   * gre: fix netns vs proto registration ordering (CVE-2011-1767)
+  * dccp: handle invalid feature options length (CVE-2011-1770)
 
  -- dann frazier <dannf@debian.org>  Tue, 17 May 2011 00:41:07 -0600
 
