--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ linux-2.6 (2.6.32-34squeeze1) UNRELEASED; urgency=high
     - cifs: check for NULL session password
   * gre: fix netns vs proto registration ordering (CVE-2011-1767)
   * dccp: handle invalid feature options length (CVE-2011-1770)
+  * [arm] 6891/1: prevent heap corruption in OABI semtimedop (CVE-2011-1759)
 
  -- dann frazier <dannf@debian.org>  Tue, 17 May 2011 00:41:07 -0600
 
