cifs: Fix cache stuffing issue in the dns_resolver keyring (CVE-2010-2524)
svn path=/dists/lenny-security/linux-2.6/; revision=17477

--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,7 @@ linux-2.6 (2.6.26-26lenny3) UNRELEASED; urgency=low
     (CVE-2011-1182)
   * Relax si_code check in rt_sigqueueinfo and rt_tgsigqueueinfo (CVE-2011-1182)
   * proc: protect mm start_code/end_code in /proc/pid/stat (CVE-2011-0726)
+  * cifs: Fix cache stuffing issue in the dns_resolver keyring (CVE-2010-2524)
 
   [ Ben Hutchings ]
   * [vserver] Complete fix for CVE-2010-4243 (Closes: #618485)
