--- a/debian/changelog
+++ b/debian/changelog
@@ -27,9 +27,11 @@ linux-2.6 (2.6.26-26lenny3) UNRELEASED; urgency=low
   * Relax si_code check in rt_sigqueueinfo and rt_tgsigqueueinfo (CVE-2011-1182)
   * proc: protect mm start_code/end_code in /proc/pid/stat (CVE-2011-0726)
   * cifs: Fix cache stuffing issue in the dns_resolver keyring (CVE-2010-2524)
+  * serial: Fix information leak in TIOCGICOUNT ioctl (CVE-2010-4075)
 
   [ Ben Hutchings ]
   * [vserver] Complete fix for CVE-2010-4243 (Closes: #618485)
+
 
  -- dann frazier <dannf@debian.org>  Wed, 30 Mar 2011 22:46:26 -0600
 
