net: ax25: improve information leak to userland fix, a further fix for CVE-2010-3875
svn path=/dists/lenny-security/linux-2.6/; revision=17557

--- a/debian/changelog
+++ b/debian/changelog
@@ -28,10 +28,11 @@ linux-2.6 (2.6.26-26lenny3) UNRELEASED; urgency=low
   * proc: protect mm start_code/end_code in /proc/pid/stat (CVE-2011-0726)
   * cifs: Fix cache stuffing issue in the dns_resolver keyring (CVE-2010-2524)
   * serial: Fix information leak in TIOCGICOUNT ioctl (CVE-2010-4075)
+  * net: ax25: improve information leak to userland fix, a further fix
+    for CVE-2010-3875
 
   [ Ben Hutchings ]
   * [vserver] Complete fix for CVE-2010-4243 (Closes: #618485)
-
 
  -- dann frazier <dannf@debian.org>  Wed, 30 Mar 2011 22:46:26 -0600
 
