char/tpm: Fix unitialized usage of data buffer (CVE-2011-1160)
svn path=/dists/lenny-security/linux-2.6/; revision=17558

--- a/debian/changelog
+++ b/debian/changelog
@@ -30,6 +30,7 @@ linux-2.6 (2.6.26-26lenny3) UNRELEASED; urgency=low
   * serial: Fix information leak in TIOCGICOUNT ioctl (CVE-2010-4075)
   * net: ax25: improve information leak to userland fix, a further fix
     for CVE-2010-3875
+  * char/tpm: Fix unitialized usage of data buffer (CVE-2011-1160)
 
   [ Ben Hutchings ]
   * [vserver] Complete fix for CVE-2010-4243 (Closes: #618485)
