--- a/debian/changelog
+++ b/debian/changelog
@@ -31,6 +31,7 @@ linux-2.6 (2.6.26-26lenny3) UNRELEASED; urgency=low
   * net: ax25: improve information leak to userland fix, a further fix
     for CVE-2010-3875
   * char/tpm: Fix unitialized usage of data buffer (CVE-2011-1160)
+  * sound/oss: remove offset from load_patch callbacks (CVE-2011-1476)
 
   [ Ben Hutchings ]
   * [vserver] Complete fix for CVE-2010-4243 (Closes: #618485)
