n_tty: Fix n_tty_write crash when echoing in raw mode (CVE-2014-0196)
svn path=/dists/wheezy-security/linux/; revision=21308

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux (3.2.57-3+deb7u1) UNRELEASED; urgency=high
+
+  * n_tty: Fix n_tty_write crash when echoing in raw mode (CVE-2014-0196)
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Sat, 10 May 2014 21:20:57 +0100
+
 linux (3.2.57-3) wheezy; urgency=medium
 
   * rtl8192ce: Fix null dereference in watchdog (Closes: #745137)
