--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
 linux (3.2.57-3+deb7u1) UNRELEASED; urgency=high
 
   * n_tty: Fix n_tty_write crash when echoing in raw mode (CVE-2014-0196)
+  * floppy: ignore kernel-only members in FDRAWCMD ioctl input (CVE-2014-1737)
+  * floppy: don't write kernel-only members to FDRAWCMD ioctl output
+    (CVE-2014-1738)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sat, 10 May 2014 21:20:57 +0100
 
