mm: try_to_unmap_cluster() should lock_page() before mlocking (CVE-2014-3122)
svn path=/dists/wheezy-security/linux/; revision=21310

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ linux (3.2.57-3+deb7u1) UNRELEASED; urgency=high
   * floppy: ignore kernel-only members in FDRAWCMD ioctl input (CVE-2014-1737)
   * floppy: don't write kernel-only members to FDRAWCMD ioctl output
     (CVE-2014-1738)
+  * mm: try_to_unmap_cluster() should lock_page() before mlocking
+    (CVE-2014-3122)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sat, 10 May 2014 21:20:57 +0100
 
