Add Debian bug numbers for CVE-2014-0196, CVE-2014-3122
svn path=/dists/wheezy-security/linux/; revision=21317

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,12 @@
 linux (3.2.57-3+deb7u1) UNRELEASED; urgency=high
 
   * n_tty: Fix n_tty_write crash when echoing in raw mode (CVE-2014-0196)
+    (Closes: #747166)
   * floppy: ignore kernel-only members in FDRAWCMD ioctl input (CVE-2014-1737)
   * floppy: don't write kernel-only members to FDRAWCMD ioctl output
     (CVE-2014-1738)
   * mm: try_to_unmap_cluster() should lock_page() before mlocking
-    (CVE-2014-3122)
+    (CVE-2014-3122) (Closes: #747326)
   * net: ipv4: current group_info should be put after using. (CVE-2014-2851)
   * Revert "isci: fix reset timeout handling" (Closes: #746642)
   * skbuff: export skb_copy_ubufs (Closes: #746602)
