Note fixes for CVE-2014-318{1,2,3,4,5,6}
svn path=/dists/wheezy/linux/; revision=21863

--- a/debian/changelog
+++ b/debian/changelog
@@ -141,12 +141,16 @@ linux (3.2.63-1) UNRELEASED; urgency=medium
       (regression in 3.2.59)
     - isofs: Fix unbounded recursion when processing relocated directories
     - HID: logitech: perform bounds checking on device_id early enough
+      (CVE-2014-3182)
     - USB: whiteheat: Added bounds checking for bulk command response
+      (CVE-2014-3183, CVE-2014-3184, CVE-2014-3185)
     - HID: logitech-dj: prevent false errors to be shown
     - ACPI / EC: Add support to disallow QR_EC to be issued when SCI_EVT isn't
       set (regression in 3.2.62)
     - HID: magicmouse: sanity check report size in raw_event() callback
+      (CVE-2014-3181)
     - HID: picolcd: sanity check report size in raw_event() callback
+      (CVE-2014-3186)
     - [armhf] 8128/1: abort: don't clear the exclusive monitors
     - [armhf] 8129/1: errata: work around Cortex-A15 erratum 830321 using dummy
       strex
