Note fixes for CVE-2014-5077 and CVE-2014-547{1,2}
svn path=/dists/wheezy/linux/; revision=21864

--- a/debian/changelog
+++ b/debian/changelog
@@ -140,6 +140,7 @@ linux (3.2.63-1) UNRELEASED; urgency=medium
     - xhci: rework cycle bit checking for new dequeue pointers
       (regression in 3.2.59)
     - isofs: Fix unbounded recursion when processing relocated directories
+      (CVE-2014-5471, CVE-2014-5472)
     - HID: logitech: perform bounds checking on device_id early enough
       (CVE-2014-3182)
     - USB: whiteheat: Added bounds checking for bulk command response
@@ -161,7 +162,7 @@ linux (3.2.63-1) UNRELEASED; urgency=medium
     - ip: make IP identifiers less predictable
     - tcp: Fix integer-overflows in TCP veno
     - tcp: Fix integer-overflow in TCP vegas
-    - net: sctp: inherit auth_capable on INIT collisions
+    - net: sctp: inherit auth_capable on INIT collisions (CVE-2014-5077)
     - iovec: make sure the caller actually wants anything in
       memcpy_fromiovecend
     - sctp: fix possible seqlock seadlock in sctp_packet_transmit()
