--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux (3.16.36-1+deb8u2) UNRELEASED; urgency=medium
+
+  * KEYS: Fix short sprintf buffer in /proc/keys show function (CVE-2016-7042)
+
+ -- Salvatore Bonaccorso <carnil@debian.org>  Tue, 18 Oct 2016 06:39:49 +0200
+
 linux (3.16.36-1+deb8u1) jessie-security; urgency=high
 
   [ Ben Hutchings ]
