mm: remove gup_flags FOLL_WRITE games from __get_user_pages() (CVE-2016-5195)

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ linux (3.16.36-1+deb8u2) UNRELEASED; urgency=medium
   * Bluetooth: Fix potential NULL dereference in RFCOMM bind callback
     (CVE-2015-8956)
   * netfilter: x_tables: speed up jump target validation (Closes: #831014)
+  * mm: remove gup_flags FOLL_WRITE games from __get_user_pages()
+    (CVE-2016-5195)
 
  -- Salvatore Bonaccorso <carnil@debian.org>  Tue, 18 Oct 2016 06:39:49 +0200
 
