--- a/debian/changelog
+++ b/debian/changelog
@@ -67,6 +67,8 @@ linux (3.2.82-1) UNRELEASED; urgency=medium
   * Revert "ecryptfs: forbid opening files without mmap handler", redundant
     with upstream fixes
   * fs: Move procfs/ecryptfs stacking check into ecryptfs, to avoid ABI change
+  * Bluetooth: Fix potential NULL dereference in RFCOMM bind callback
+    (CVE-2015-8956)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 04 Sep 2016 14:08:46 +0100
 
