--- a/debian/changelog
+++ b/debian/changelog
@@ -69,6 +69,7 @@ linux (3.2.82-1) UNRELEASED; urgency=medium
   * fs: Move procfs/ecryptfs stacking check into ecryptfs, to avoid ABI change
   * Bluetooth: Fix potential NULL dereference in RFCOMM bind callback
     (CVE-2015-8956)
+  * KEYS: Fix short sprintf buffer in /proc/keys show function (CVE-2016-7042)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 04 Sep 2016 14:08:46 +0100
 
