--- a/debian/changelog
+++ b/debian/changelog
@@ -70,6 +70,7 @@ linux (3.2.82-1) UNRELEASED; urgency=medium
   * Bluetooth: Fix potential NULL dereference in RFCOMM bind callback
     (CVE-2015-8956)
   * KEYS: Fix short sprintf buffer in /proc/keys show function (CVE-2016-7042)
+  * scsi: arcmsr: Buffer overflow in arcmsr_iop_message_xfer() (CVE-2016-7425)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 04 Sep 2016 14:08:46 +0100
 
