mm, gup: close FOLL MAP_PRIVATE race (CVE-2016-5195)

--- a/debian/changelog
+++ b/debian/changelog
@@ -78,6 +78,7 @@ linux (3.2.82-1) UNRELEASED; urgency=medium
     - net: add a lock around icmp_sk()
     - fs/dcache: resched/chill only if we make no progress
     - fs/dcache: incremental fixup of the retry routine
+  * mm, gup: close FOLL MAP_PRIVATE race (CVE-2016-5195)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 04 Sep 2016 14:08:46 +0100
 
