Bluetooth: Fix potential NULL dereference in RFCOMM bind callback (CVE-2015-8956)

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ linux (3.16.36-1+deb8u2) UNRELEASED; urgency=medium
 
   * KEYS: Fix short sprintf buffer in /proc/keys show function (CVE-2016-7042)
   * scsi: arcmsr: Buffer overflow in arcmsr_iop_message_xfer() (CVE-2016-7425)
+  * Bluetooth: Fix potential NULL dereference in RFCOMM bind callback
+    (CVE-2015-8956)
 
  -- Salvatore Bonaccorso <carnil@debian.org>  Tue, 18 Oct 2016 06:39:49 +0200
 
