[x86] KVM: fix singlestepping over syscall (CVE-2017-7518)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux (3.16.43-2+deb8u4) UNRELEASED; urgency=medium
+
+  * [x86] KVM: fix singlestepping over syscall (CVE-2017-7518)
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Sun, 06 Aug 2017 22:03:56 +0100
+
 linux (3.16.43-2+deb8u3) jessie-security; urgency=high
 
   * regulator: core: Fix regualtor_ena_gpio_free not to access pin after
