--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 linux (3.16.43-2+deb8u4) UNRELEASED; urgency=medium
 
   * [x86] KVM: fix singlestepping over syscall (CVE-2017-7518)
+  * binfmt_elf: use ELF_ET_DYN_BASE only for PIE (CVE-2017-1000370,
+    CVE-2017-1000371)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 06 Aug 2017 22:03:56 +0100
 
