--- a/debian/changelog
+++ b/debian/changelog
@@ -91,6 +91,9 @@ linux (3.2.91-1) UNRELEASED; urgency=medium
     - ALSA: timer: Fix missing queue indices reset at SNDRV_TIMER_IOCTL_SELECT
       (CVE-2017-1000380)
 
+  [ Ben Hutchings ]
+  * ipv6: avoid overflow of offset in ip6_find_1stfragopt (CVE-2017-7542)
+
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 03 Jul 2017 17:17:55 +0100
 
 linux (3.2.89-2) wheezy-security; urgency=high
