mqueue: fix a use-after-free in sys_mq_notify() (CVE-2017-11176)

--- a/debian/changelog
+++ b/debian/changelog
@@ -93,6 +93,7 @@ linux (3.2.91-1) UNRELEASED; urgency=medium
 
   [ Ben Hutchings ]
   * ipv6: avoid overflow of offset in ip6_find_1stfragopt (CVE-2017-7542)
+  * mqueue: fix a use-after-free in sys_mq_notify() (CVE-2017-11176)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 03 Jul 2017 17:17:55 +0100
 
