--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ linux (3.16.43-2+deb8u4) UNRELEASED; urgency=medium
   * ALSA: timer: Fix missing queue indices reset at SNDRV_TIMER_IOCTL_SELECT
     (CVE-2017-1000380)
   * timerfd: Protect the might cancel mechanism proper (CVE-2017-10661)
+  * xfrm: policy: check policy direction value (CVE-2017-11600)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 06 Aug 2017 22:03:56 +0100
 
