--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ linux (3.16.43-2+deb8u4) UNRELEASED; urgency=medium
     (CVE-2017-1000380)
   * timerfd: Protect the might cancel mechanism proper (CVE-2017-10661)
   * xfrm: policy: check policy direction value (CVE-2017-11600)
+  * packet: fix tp_reserve race in packet_set_ring (CVE-2017-1000111)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 06 Aug 2017 22:03:56 +0100
 
