--- a/debian/changelog
+++ b/debian/changelog
@@ -96,6 +96,7 @@ linux (3.2.91-1) UNRELEASED; urgency=medium
   * mqueue: fix a use-after-free in sys_mq_notify() (CVE-2017-11176)
   * timerfd: Protect the might cancel mechanism proper (CVE-2017-10661)
   * xfrm: policy: check policy direction value (CVE-2017-11600)
+  * packet: fix tp_reserve race in packet_set_ring (CVE-2017-1000111)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 03 Jul 2017 17:17:55 +0100
 
