--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,9 @@ linux (3.16.43-2+deb8u4) UNRELEASED; urgency=medium
   * timerfd: Protect the might cancel mechanism proper (CVE-2017-10661)
   * xfrm: policy: check policy direction value (CVE-2017-11600)
   * packet: fix tp_reserve race in packet_set_ring (CVE-2017-1000111)
+  * ipv6: Should use consistent conditional judgement for ip6 fragment
+    between __ip6_append_data and ip6_finish_output
+  * udp: consistently apply ufo or fragmentation (CVE-2017-1000112)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 06 Aug 2017 22:03:56 +0100
 
