--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+linux (3.16.68-2) UNRELEASED; urgency=medium
+
+  * mwifiex: Fix possible buffer overflows at parsing bss descriptor
+    (CVE-2019-3846)
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Sun, 16 Jun 2019 19:45:46 +0100
+
 linux (3.16.68-1) jessie-security; urgency=high
 
   * New upstream stable update:
