--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ linux (3.16.68-2) UNRELEASED; urgency=medium
   * mwifiex: Don't abort on small, spec-compliant vendor IEs
   * mm/mincore.c: make mincore() more conservative (CVE-2019-5489)
   * tcp: limit payload size of sacked skbs (CVE-2019-11477)
+  * tcp: tcp_fragment() should apply sane memory limits (CVE-2019-11478)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 16 Jun 2019 19:45:46 +0100
 
