scsi: megaraid_sas: return error when create DMA pool failed (CVE-2019-11810)

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,8 @@ linux (3.16.68-2) UNRELEASED; urgency=medium
   * tcp: enforce tcp_min_snd_mss in tcp_mtu_probing()
   * tcp: fix fack_count accounting on tcp_shift_skb_data()
   * tcp: Avoid ABI change for DoS fixes
+  * scsi: megaraid_sas: return error when create DMA pool failed
+    (CVE-2019-11810)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 16 Jun 2019 19:45:46 +0100
 
