--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,8 @@ linux (3.16.68-2) UNRELEASED; urgency=medium
   * tcp: Avoid ABI change for DoS fixes
   * scsi: megaraid_sas: return error when create DMA pool failed
     (CVE-2019-11810)
+  * ext4: zero out the unused memory region in the extent tree block
+    (CVE-2019-11833)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 16 Jun 2019 19:45:46 +0100
 
